# sdl-x

./: .gitignore  README.org  pyproject.toml  setup.py  test_square.py
reesarch/: manually_grad.py  manually_rosenbrock.py  research_grad_2.py
samples/: overfit_weight_decay.py  plt_sigmoid.py  simple_network_on_mnist.py
sdl/: __init__.py  active.py  gradient.py  layer.py  layers.py  lose.py  mnist.py  net.py  optimizer.py
sdl_x/: __init__.py  add.py  config.py  exp.py  function.py  gradient.py  layers.py  lose.py  mul.py  numerical_diff.py  pow.py  sin.py  square.py  sub.py  test_calc_grad.py  test_function.py  test_numerical_diff.py  test_sdl_x.py  test_sub.py  test_util_dot_graph.py  test_variable.py  util_dot_graph.py  variable.py
sdl_x/function/: add.py  function.py  ln.py  mat_mul.py  mul.py  pow.py  reshape.py  sub.py  sum.py  tanh.py  transpose.py
sdl_x/layer/: __init__.py  active.py  layer.py  loss.py
sdl_x/loss/: mean_squared_error.py
sdl_x/util/: __init__.py
src/sdl_x/: __init__.py  exp.py  net.py  numerical_diff.py  parameter.py  sin_cos.py  square.py  test_calc_grad.py  test_function.py  test_mul.py  test_numerical_diff.py  test_sdl_x.py  test_sub.py  test_util_dot_graph.py  test_variable.py  util_reshape_sum_backward.py  variable.py
test/: active_test.py  draw_active.py  draw_func.py  gradient_check.py  gradient_test.py  lose_test.py  t_net.py  test_calc_grad.py  test_function.py  test_mul.py  test_numerical_diff.py  test_sdl_x.py  test_square.py  test_util_dot_graph.py  test_variable.py  util.py
test/util/: util_test_layer.py
(+24 files in other folders)
